--- a/layouts/books/single.html
+++ b/layouts/books/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <br>
-  <p>layouts/test/books/single.html</p>
+  <p>layouts/books/single.html</p>
   
   <h1>{{ .Title }}</h1>
 
