--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -360,8 +360,36 @@ blockquote.alert {
 }
 
 .rating-stars {
-  width: 300px;
-  height: auto;
+  display: flex;
+  justify-content: center; /* 左右中央揃え */
+  align-items: center; /* 垂直方向の中央揃え */
+  /* 子要素が親要素のサイズを超えないようにする */
+  /* overflow: hidden; */
+  /* display: block; */
+  /* 左右中央揃え */
+  /* text-align: center;  */
+  /* 左右中央揃え */
+  /* margin: 0 auto;  */
+  /* width: 200px; */
+  /* width: 100%; */
+  /* height: 50px; */
+}
+
+.q-difficulty-rating {
+  /* 親要素の50%の幅に設定 */
+  /* flex-basis: 100%;  */
+  /* 拡大しない */
+  /* flex-grow: 0;  */
+  /* 親要素に対して拡大 */
+  /* flex-grow: 1; */
+  /* 親要素の150%に設定 */
+  /* width: 150%; */
+  /* width: 200px; */
+  /* width: calc(var(--base-font-size) * 5.0); */
+  /* height: 50px; */
+  width: calc(var(--base-font-size) * 2.3 * 5); /* 5つの星を横に並べる場合 */
+  /* height: calc(var(--base-font-size) * 1.7); */
+  margin: 0 auto;
 }
 
 .rating-stars .filled-stars{
@@ -373,11 +401,6 @@ blockquote.alert {
 }
 
 /* 演習問題の難易度レーティング (星) */
-.q-difficulty-rating {
-  width: 200px;
-  height: auto;
-}
-
 .q-difficulty-rating .filled-stars {
   fill: var(--q-difficulty-rating-filled-stars);
 }
