--- a/layouts/shortcodes/k100/q-list.html
+++ b/layouts/shortcodes/k100/q-list.html
@@ -2,11 +2,12 @@
   "standard" .Site.Params.k100.site.edition.s
   "advanced" .Site.Params.k100.site.edition.a
 }}
+{{ $root := .Get "root" | default ".." }}
 {{ $data := .Site.Data.k100.questions }}
 {{ if not $data }}
   <div class="error-message">データが存在しません。</div>
 {{ else }}
-  {{ $ed := split (.Get 0 | default "standard,advanced") "," }}
+  {{ $ed := split (.Get "ed" | default "standard,advanced") "," }}
   {{ range $ed }}
     {{ $category := .}}
     <div class="q-list-category-title">
@@ -25,8 +26,9 @@
         {{ $question := index $data $category }}
         {{ if $question }}
           {{ range $question }}
+            {{ $url := path.Join $root $category (lower .id) }}
             <tr>
-              <td><a href="../{{ $category }}/{{ lower .id }}">{{ .id }}</a></td>
+              <td><a href="{{ $url }}">{{ .id }}</a></td>
               <td>{{ partial "rating-stars.html" (dict "class" "q-difficulty-rating" "rating" .difficulty) }}</td>
               <td>{{ .text | markdownify }}</td>
             </tr>
