--- a/layouts/partials/rating-stars.html
+++ b/layouts/partials/rating-stars.html
@@ -4,8 +4,9 @@
 {{ if or (lt $rating 0) (gt $rating 5) }}
   <p>Error: Rating value is out of range. It must be between 0 and 5.</p>
 {{ else }}
+  {{ $viewBox := "0 0 120 25" }}
   <div class="rating-stars {{ $class }}-container">
-    <svg class="{{ $class }}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 30" role="img" aria-label="Rating: {{ $rating }} out of 5">
+    <svg class="{{ $class }}" xmlns="http://www.w3.org/2000/svg" viewBox="{{ $viewBox }}" role="img" aria-label="Rating: {{ $rating }} out of 5" width="100%" height="100%">
       <!-- 星形のポリゴン座標リスト -->
       {{ $stars := slice 
         "10,1 13,9 21,9 15,14 17,22 10,18 3,22 5,14 -1,9 7,9"
