--- a/layouts/shortcodes/k100/question.html
+++ b/layouts/shortcodes/k100/question.html
@@ -30,4 +30,12 @@
 {{ end -}}
 
 {{- $question := index $filtered 0 -}}
-{{- $question.text | markdownify -}}
+<div class="question-difficulty">
+  <span class="difficulty-label">難易度</span>
+  <span class="difficulty-stars">
+    {{ partial "rating-stars.html" (dict "class" "q-difficulty-rating" "rating" $question.difficulty) }}
+  </span>
+</div>
+<div class="question-text">
+  {{ $question.text | markdownify }}
+</div>
