--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -399,14 +399,18 @@ blockquote.alert {
 
 /* 全体のコンテナのスタイリング */
 .q-difficulty-rating-container {
-  display: inline-block;
-  width: 300px;
-  height: 45px;
-  position: relative;
+  /* display: inline-block; */
+  display: flex;
+  align-items: center; /* 上下中央揃え */
+  justify-content: flex-start; /* 必要なら左寄せ、中央揃えの場合は center */
+  width: 110px;
+  /* position: relative; */
 }
 
 /* 星アイコン全体のデフォルトスタイリング */
 .q-difficulty-rating {
+  display: block;
+  vertical-align: middle; /* 古いブラウザ対応用 */
   width: 100%;
   height: auto;
   fill: none;
@@ -498,6 +502,12 @@ blockquote.alert {
 
 /* 設問行のスタイル (奇数と偶数で背景色を分ける) */
 
+.q-list-table {
+border-collapse: separate;
+/* border-spacing: 0 15px; */
+border-spacing: 0 4px;
+}
+
 .q-list-table tbody tr:nth-of-type(2n-1) {
   /* background-color: #f9f9f9; */
   background-color: var(--code-bg);
@@ -507,7 +517,8 @@ blockquote.alert {
 }
 
 .q-list-table tbody tr:nth-of-type(2n) {
-  background-color: var(--theme);
+  /* background-color: var(--theme); */
+  background-color: #FEFEFF;
 }
 .dark .q-list-table tbody tr:nth-of-type(2n) {
   background-color: #202020;
@@ -515,17 +526,24 @@ blockquote.alert {
 
 /* .q-id をホバー時に背景色を変える */
 .q-list-table .id-row:hover {
-  background-color: #f1f1f1;
-}
-.dark .q-list-table .id-row:hover {
-  background-color: #080808;
+  /* background-color: #f1f1f1; */
+  /* background-color: #E9E9FF; */
+  background-color: #E0E9FF;
 }
 /* content-row に対してもホバー時に背景色を変更する */
 .q-list-table .id-row:hover + .content-row {
-  background-color: #f1f1f1;
+  /* background-color: #F3F3FF; */
+  background-color: #F5F6FF;
+}
+.dark .q-list-table .id-row:hover {
+  /* background-color: #080808; */
+  /* background-color: #07073C */
+  /* background-color: #232350 */
+  background-color: #232950
 }
 .dark .q-list-table .id-row:hover + .content-row {
-  background-color: #080808;
+  /* background-color: #080808; */
+  background-color: #050520;
 }
 
 /* .q-list-table tbody td a { */
